fix css spacing for smaller fonts, update schedule

--- a/_sass/custom/module.scss
+++ b/_sass/custom/module.scss
@@ -90,6 +90,11 @@
 
         dd {
           margin: 0;
+          padding: $sp-2;
+
+          a {
+            padding: $sp-1;
+          }
         }
       }
     }
